<resources>
    <string name="app_name">玩多多</string>
    <string name="album_view">选择图片</string>
    <string name="image_view">单击选择</string>
    <string name="add">确定</string>
    <string name="selected">已选</string>
    <string name="limit_exceeded">最多能选 %d 张</string>
    <string name="wo_de_shuoshuo">我的说说</string>
    <string name="zui_jin_lai_fang">最近来访</string>
    <string name="xi_huan_de_ren">喜欢的人</string>
    <string name="wo_gou_mai_de_fu_wu">我购买的服务</string>
    <string name="wo_de_zhang_hu">我的账户(会员)</string>
    <string name="setting">设置</string>
    <string name="ren_zheng_xing_xiang_shi_pin">认证形象视频</string>
    <string name="zhi_ye_ren_zheng">职业认证</string>
    <string name="bian_ji_zi_liao">编辑资料</string>
    <string name="chong_zhi">充值</string>
    <string name="wan_bi">玩币</string>
    <string name="you_hui_quan">优惠券</string>
    <string name="shui_kan_guo_wo">谁看过我</string>
    <string name="dian_ji_ren_zheng">点击认证</string>
    <string name="xing_xiang_shi_pin_yi_ren_zheng">形象视频已认证</string>
    <string name="jie_shi_wan_ban">结实玩伴</string>
    <string name="shang_chuan_shi_pin">上传视频</string>
    <string name="dian_ji_geng_gai_feng_mian">点击更改封面</string>
    <string name="dang_an">档案</string>
    <string name="dong_tai">动态</string>
    <string name="yao_yue">邀约</string>
    <string name="ji_neng">技能</string>
    <string name="zi_liao">资料</string>
    <string name="xiang_ce">相册</string>
    <string name="ren_zheng">认证</string>
    <string name="guan_yu_wo">关于我</string>
    <string name="xiao_bian_zhuan_fang">小编专访</string>
    <string name="shan_chang">擅长</string>
    <string name="zui_man_yi_de_bu_wei">最满意的部位</string>
    <string name="li_wu">礼物</string>
    <string name="cha_kan_geng_duo">查看更多</string>
    <string name="xiu_gai">修改</string>
    <string name="gong_kai_zhao_pian">公开照片</string>
    <string name="dian_ji_shang_chuan">点击上传</string>
    <string name="yin_mi_zhao_pian">隐秘照片</string>
    <string name="shou_ji_hao">手机号</string>
    <string name="yi_tian_xie">已填写</string>
    <string name="xing_xiang_shi_pin">形象视频</string>
    <string name="ti_sheng_hui_tou_lv">提升回头率</string>
    <string name="shen_fen_ren_zheng">身份认证</string>
    <string name="wei_ren_zheng">未认证</string>
    <string name="qing_shu_ru_shou_ji_hao">请输入手机号</string>
    <string name="qing_shu_ru_mi_ma">请输入密码</string>
    <string name="deng_lu">登录</string>
    <string name="wang_ji_mi_ma">忘记密码?</string>
    <string name="shi_yong_yan_zheng_ma_deng_lu">使用验证码登录</string>
    <string name="shi_yong_di_san_fang_ruan_jian_deng_lu">使用第三方软件登录</string>
    <string name="deng_lu_biao_shi_tong_yi_wan_duo_duo">登录表示同意万多多《注册协议》</string>
    <string name="qing_shu_ru_yan_zheng_ma">请输入验证码</string>
    <string name="qing_shu_ru_xin_mi_ma">请输入新密码</string>
    <string name="dian_ji_huo_qu_yan_zheng_ma">点击获取验证码</string>
    <string name="que_ding_chong_zhi">确定充值</string>
    <string name="zhao_hui_mi_ma">找回密码</string>
    <string name="tui_chu_deng_lu">退出登录</string>
    <string name="huo_qu_yan_zheng_ma">获取验证码</string>
    <string name="yan_zheng_ma">验证码</string>
    <string name="cheng_wei_wan_jia">成为玩家</string>
    <string name="wan_duo_duo">玩多多</string>
    <string name="quan_bu_ji_neng">全部技能</string>
    <string name="bu_xian_nan_nv">不限男女</string>
    <string name="zhi_neng_pai_xu">智能排序</string>
    <string name="hui_yuan_zhong_xin">会员中心</string>
    <string name="ji_neng_ren_zheng">技能认证</string>
    <string name="player_skill_choose_once">一次只能添加一个技能</string>
    <string name="wan_jia_ji_neng_xuan_ze">玩家技能选择</string>
    <string name="xuan_ze_cheng_shi">选择城市</string>
    <string name="ji_neng_zhao_pian">技能照片</string>
    <string name="di_yi_zhang_mo_ren_wei">(第一张默认为封面照)</string>
    <string name="cha_kan_shi_li">查看示例</string>
    <string name="qing_shang_chuan_yi_dao_liu_zhang">*请上传1~6张和本人技能相关的图片</string>
    <string name="ji_neng_shi_pin">技能视频</string>
    <string name="xuan_tian">(选填)</string>
    <string name="shang_chuan_de_shi_pin_bi_xu_he_ji_neng">*上传的视频内容必须和技能相关,仅限一个</string>
    <string name="ji_neng_xiang_qing">技能详情</string>
    <string name="ji_neng_lei_xing">技能类型</string>
    <string name="biao_ti">标题</string>
    <string name="jia_ge">价格(元/小时)</string>
    <string name="wan_shan_ji_neng_xin_xi">完善技能信息</string>
    <string name="gen_ju_ding_wei_tui_jian">根据您的定位推荐</string>
    <string name="zhuan_ye_ji_neng_zheng_shu">专业技能证书</string>
    <string name="li_ke_yu_yue">立刻预约</string>
    <string name="wan_jia_ping_jia">玩家评价</string>
    <string name="fu_wu_shuo_ming">服务说明</string>
    <string name="qi_ta_ji_neng">其他技能</string>
    <string name="ti_jiao_ding_dan">提交订单</string>
    <string name="xuan_ze_shi_jian">选择时间</string>
    <string name="xuan_ze_di_dian">选择地点</string>
    <string name="you_hui_xin_xi">优惠信息</string>
    <string name="App_shou_dan_you_hui">App首单优惠</string>
    <string name="que_ren_yu_yue">确认预约</string>
    <string name="bang_ding_shou_ji">绑定手机</string>
    <string name="mi_ma">密码</string>
    <string name="xia_yi_bu">下一步</string>
    <string name="moblie_msg">绑定手机号，方便您收到订单消息</string>
    <string name="make_sure_pay">确认并支付</string>
    <string name="zhi_fu_sheng_yu_shi_jian">支付剩余时间</string>
    <string name="ding_dan_xin_xi">订单信息</string>
    <string name="yu_yue_shi_jian">预约时间</string>
    <string name="yu_yue_chang_di">预约场地</string>
    <string name="ding_dan_jin_e">订单金额</string>
    <string name="ding_dan_biao_hao">订单编号</string>
    <string name="xuan_ze_zhi_fu_fang_shi">选择支付方式</string>
    <string name="pay_weinxin">微信支付</string>
    <string name="pay_zhifubao">支付宝</string>
    <string name="pay_wallet">钱包</string>
    <string name="li_ji_zhi_fu">立即支付</string>
    <string name="dian_ji_cha_kan">点击查看</string>
    <string name="tui_kuan_gui_ze">退款规则</string>
    <string name="tian_jia_qi_ta_ji_neng">添加其他技能</string>
    <string name="shi_li">示例</string>
    <string name="xuan_ze_di_dian_qu_yu">选择地点区域</string>
    <string name="yue_wan_shuo_ming">约玩说明</string>
    <string name="ji_neng_xiang_guan_zheng_shu">技能相关证书(选填)</string>
    <string name="shi_fo_jie_shou_yin_jiu">是否接受饮酒</string>
    <string name="yu_lan">预览</string>
    <string name="fa_bu">发布</string>
    <string name="zhi_neng_an_zhao_wo_she_ding">只能按照我设定的时间表来预约</string>
    <string name="yu_yue_qian_xiang_wo">预约前向我商定确认时间</string>
    <string name="ji_neng_deng_ji_zheng_shu">技能等级证书，职业证书或获奖证书(选填)</string>
    <string name="quan_xuan">全选</string>
    <string name="gou_tong_fang_shi">沟通方式</string>
    <string name="shi_ming_ren_zheng">实名认证</string>
    <string name="city_pick">城市选择</string>
    <string name="xing_zheng_qu">行政区(可多选)</string>
    <string name="zhang_hao_yu_an_quan">账号与安全</string>
    <string name="xin_xiao_xi_tong_zhi">新消息通知</string>
    <string name="guan_li_hei_ming_dan">管理黑名单</string>
    <string name="chu_fa_ming_dan">处罚名单</string>
    <string name="yi_jian_fan_kui">意见反馈</string>
    <string name="gei_wo_men_ping_fen">给我们评分</string>
    <string name="guan_yu_wan_duo_duo">关于玩多多</string>
    <string name="ping_tai_xing_wei_gui_fan">平台行为规范</string>
    <string name="qing_kong_huan_cun">清空缓存</string>
    <string name="tui_chu_wo_de_zhang_hao">退出我的账号</string>
    <string name="zong_shou_ru">总收入</string>
    <string name="ji_jiang_dao_zhang">即将到账</string>
    <string name="fa_bu_ji_neng">发布技能</string>
    <string name="qu_ping_jia">去评价</string>
    <string name="zhi_fu_bao_xing_ming">支付宝姓名</string>
    <string name="qing_tian_xie">请填写</string>
    <string name="zhi_fu_bao_zhang_hu">支付宝账户</string>
    <string name="ti_xian_jin_e">提现金额</string>
    <string name="rmb">￥</string>
    <string name="quan_bu_ti_xian">全部提现</string>
    <string name="shen_qing_ti_xian">申请提现</string>
    <string name="qing_shu_ru_chuang_guan_guan_jian_zi">请输入场馆关关键字</string>
    <string name="quan_bu_shang_quan">全部商圈</string>
    <string name="qing_ti_qian_tu_ding_hao">请提前预定好场地哦</string>
    <string name="yu_yue_cheng_gong">预约成功</string>
    <string name="yu_yue_da_ren">预约达人</string>
    <string name="liao_tian">聊天</string>
    <string name="dui_huan">兑换</string>
    <string name="qing_shu_ru_you_hui_ma">请输入优惠码</string>
    <string name="yue_wan_quan">约玩券</string>
    <string name="quan_ping_lei_shi_yong">全品类使用</string>
    <string name="cha_kan">查看</string>
    <string name="li_shi_you_hui_quan">历史优惠券</string>
    <string name="xi_huan_wo">喜欢我</string>
    <string name="wo_xi_huan">我喜欢</string>
    <string name="hu_xiang_xi_huan">互相喜欢</string>
    <string name="zhang_hu_yu_e">账户余额</string>
    <string name="ti_xian">提现</string>
    <string name="zhi_fu_an_quan">支付安全</string>
    <string name="search_hint">上海/shanghai/sh</string>
    <string name="discuss_hint_text">说说哪里满意，让更多的人知道Ta</string>
    <string name="ni_ming_pin_lun">匿名评论</string>
    <string name="ti_jiap_ping_jia">提价评价</string>
    <string name="shan_chu_ji_neng">删除技能</string>
    <string name="bian_ji_ji_neng">编辑技能</string>
    <string name="ge_ren_zi_liao">个人资料</string>
    <string name="ji_neng_guan_li">技能管理</string>
    <string name="ji_ben_xin_xi">基本信息</string>
    <string name="dian_ji_bian_ji">点击编辑</string>
    <string name="zi_liao_ren_zheng">资料认证</string>
    <string name="ni_cheng">昵称</string>
    <string name="xing_bie">性别</string>
    <string name="nian_lin">年龄</string>
    <string name="xing_zuo">星座</string>
    <string name="shen_gao">身高</string>
    <string name="qing_gan_zhuang_kuang">情感状况</string>
    <string name="suo_zai_di">所在地</string>
    <string name="zhi_ye">职业</string>
    <string name="shou_ru">收入</string>
    <string name="shou_ji_hao_ma">手机号码</string>
    <string name="dian_ji_xiu_gai">点击修改</string>
    <string name="wo_de_biaoq_qian">我的标签</string>
    <string name="wo_de_ge_xing_biao_qian">我的个性标签</string>
    <string name="wo_de_xing_qu">我的兴趣</string>
    <string name="wo_xi_huan_de_yun_dong">我喜欢的运动</string>
    <string name="wo_xi_huan_de_ge_shou">我喜欢的歌手</string>
    <string name="wo_xi_huan_de_mei_shi">我喜欢的美食</string>
    <string name="wen_da">问答</string>
    <string name="tian_jia_wen_ti">添加问题</string>
    <string name="xi_huan">喜欢</string>
    <string name="lai_fang_zhe">来访者</string>
    <string name="wo_kan_guo_de_ren">我看过的人</string>
    <string name="chong_zhi_jin_e">充值金额</string>
    <string name="jin_e">金额</string>
    <string name="she_zhi_zhi_fu_mi_ma">设置支付密码</string>
    <string name="msg_return">请写下您的建议，玩多多将不断改进</string>
    <string name="lian_xi_fang_shi">联系方式:  </string>
    <string name="wo_xi_huan_de_lv_xing">我喜欢的旅行</string>
    <string name="zi_ding_yi_tian_jia_biao_qian">自定义添加标签</string>
    <string name="que_ding">确定</string>
    <string name="shang_chuan_tou_xiang">上传头像</string>
    <string name="qing_she_zhi_deng_lu_mi_ma">请设置登录密码</string>
    <string name="qing_shu_ru_ni_cheng">请输入昵称</string>
    <string name="nan">男</string>
    <string name="nv">女</string>
    <string name="jin_ru_wan_duo_duo">进入玩多多的世界</string>
    <string name="zi_wo_jie_shao">自我介绍</string>
    <string name="ji_neng_shi_zhan_di_qu">技能施展地区</string>
    <string name="xiu_gai_mi_ma">修改密码</string>
    <string name="xia_jia">下架</string>
    <string name="fu_kuan">付款：</string>
    <string name="deng_lu_mi_ma">登录密码</string>
    <string name="qu_xiao">取消</string>
    <string name="zui_duo_bu_chao_guo_liu">最多不超过6个汉字</string>
    <string name="zhi_li_yu_da_zao">致力于打造垂直的旅游在线社交平台</string>
    <string name="wdd_desc">\@Copyright 2015 玩多多</string>
    <string name="ti_jiao">提交</string>
    <string name="qing_shu_ru_nin_she_zhi_de_jia_ge">请输入您要设置的金额(元/时)</string>
    <string name="jie_shou_ben_chan_pin">接受本产品的</string>
    <string name="cha_kan_dan_shen">查看单身</string>
    <string name="gao_ji_shai_xuan">高级筛选</string>
    <string name="pu_tong_shai_xuan">普通筛选</string>
    <string name="pai_xu">排序</string>
    <string name="shi_pin_ren_zheng">视频认证</string>
    <string name="li_wo_zui_jin">离我最近</string>
    <string name="zui_jin_huo_yue">最近活跃</string>
    <string name="quan_bu">全部</string>
    <string name="bu_xian">不限</string>
</resources>