<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_item_manage_bg">
    <EditText
        android:id="@+id/et_add_new_tag"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50_dip"
        android:paddingRight="@dimen/dimen_10_dip"
        android:maxLength="6"
        android:hint="@string/zui_duo_bu_chao_guo_liu"
        android:textColorHint="@color/c_65_75_85"
        android:textColor="@color/c_127_130_134"
        android:background="@null"
        android:layout_marginLeft="@dimen/dimen_15_dip"/>
    <View style="@style/divide_line"
        android:layout_marginLeft="@dimen/dimen_0_dip"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50_dip"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_false"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/qu_xiao"
            android:textSize="14sp"
            android:textColor="@color/c_65_75_85"
            android:gravity="center"/>
        <View
            android:layout_width="@dimen/dimen_0.5_dip"
            android:layout_height="match_parent"
            android:background="@color/divide_line"/>
        <TextView
            android:id="@+id/tv_true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/que_ding"
            android:textSize="14sp"
            android:textColor="@color/c_129_143_255"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>