<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgcolor"
    tools:context="com.wanduoduo.ui.info.CouponsActivity">
    <include layout="@layout/base_title_bar"/>

    <LinearLayout
        android:id="@+id/ll_coupons_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_55_dip"
        android:paddingLeft="@dimen/dimen_15_dip"
        android:paddingRight="@dimen/dimen_15_dip"
        android:gravity="center_vertical"
        android:background="@color/bgcolor_deep">
        <EditText
            android:id="@+id/et_coupons_search"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_35_dip"
            android:layout_weight="3"
            android:background="@drawable/shape_radius_5_2b343e"
            android:layout_marginRight="@dimen/dimen_8_dip"
            android:gravity="center"
            android:textSize="13sp"
            android:textCursorDrawable="@drawable/et_cursor"
            android:textColor="@color/c_127_130_134"
            android:textColorHint="@color/c_127_130_134"
            android:hint="@string/qing_shu_ru_you_hui_ma"/>
        <TextView
            android:id="@+id/tv_conpons_search"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_35_dip"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/dui_huan"
            android:background="@drawable/shape_moblie_tv_bg_blue"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:id="@+id/ll_old_pass_coupons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_20_dip"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cha_kan"
            android:textSize="13sp"
            android:textColor="@color/c_65_75_85"/>
        <TextView
            android:id="@+id/tv_old_pass_coupons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/li_shi_you_hui_quan"
            android:textSize="13sp"
            android:textColor="@color/c_127_130_134"
            android:drawableBottom="@drawable/shape_ret_7f8286"/>
    </LinearLayout>
</LinearLayout>
